# Archons-Eye

./: .gitignore  LICENSE  README.md  archons_eye.spec  build.bat  pyproject.toml  test_eddn.py
archons_eye/: __init__.py  config.py  main.py
archons_eye/core/: cache.py  controller.py  eddn_listener.py  edsm_client.py  journal_watcher.py  scoring.py
archons_eye/gui/: main_window.py  styles.py  system_table.py
archons_eye/models/: system.py
